Fix ImGui crash, boost FPS, speed up launch - comprehensive update
ImGui crash fix:
- Lower reported GLFW version from 3.4.0 to 3.2.0. ImGui's GLFW backend
  enables wantUpdateMonitors when version >= 3.3.0, which calls
  updateMonitors() iterating platform viewports via native struct ops.
  This crashes on Android's stubbed GLFW (native SIGSEGV, no Java trace).
  GLFW 3.2.0 disables this code path. The stub still has all 3.3+ APIs.
- Fix IntBuffer methods: use absolute put(index, value) instead of
  relative put(value) to avoid advancing buffer position unexpectedly.

FPS optimization:
- Add -Xverify:none to skip bytecode verification (2-5s faster startup)
- Remove all LIBGL_*/MESA_*/ZINK_* env vars from FPS boost profiles —
  these conflict with renderer plugins (MobileGlues, gl4es, Zink) which
  set their own GL driver environment correctly. Overriding them here
  caused rendering issues and potential crashes.
- Remove -XX:-UseBiasedLocking from common flags (removed in Java 19+)

🦝 Co-created with [Raccoon AI](https://raccoonai.tech)

Co-Authored-By: ACE <ace@raccoonai.tech>